--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
+    <title>Practicing CSS</title>
 </head>
 <body>
-    <h1>Hellooooo there!!!</h1>
-    <form >
-        <label>First Name:</label> <input type="text" name="" id="">
-        
-    </form>
+  <h1>The Best Movie of All Time</h1>  
+  <div class="container">
+      <img id="img1" src="images/fondo1.jpg" alt="">
+      <img id="img2" src="images/fondo2.jpg" alt="">
+      <img id="img3" src="images/fondo3.jpg" alt="">
+      <img id="img4" src="images/fondo4.jpg" alt="">
+      <img id="img5" src="images/fondo5.jpg" alt="">
+      <img id="img6" src="images/fondo6.jpg" alt="">
+      <img id="img7" src="images/fondo7.jpg" alt="">
+      <img id="img8" src="images/fondo8.jpg" alt="">
+  </div>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat aut vero, odit repellat esse in totam laborum numquam assumenda consequatur dignissimos architecto consequuntur corporis voluptates quis, temporibus quibusdam cumque at?</p>
 </body>
 </html>
