--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <title>Practicing CSS</title>
+  <title>Layout Master</title>
+  <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-  <h1>The Best Movie of All Time</h1>  
   <div class="container">
-      <img id="img1" src="images/fondo1.jpg" alt="">
-      <img id="img2" src="images/fondo2.jpg" alt="">
-      <img id="img3" src="images/fondo3.jpg" alt="">
-      <img id="img4" src="images/fondo4.jpg" alt="">
-      <img id="img5" src="images/fondo5.jpg" alt="">
-      <img id="img6" src="images/fondo6.jpg" alt="">
-      <img id="img7" src="images/fondo7.jpg" alt="">
-      <img id="img8" src="images/fondo8.jpg" alt="">
+      <div class="zone green">
+          <ul>
+              <li><a href="">About</a></li>
+              <li><a href="">Products</a></li>
+              <li><a href="">Our Team</a></li>
+              <li><a href="">Contacts</a></li>
+          </ul>
+      </div>
+      <div class="zone red">Cover</div>
+      <div class="zone blue">Project Grid</div>
+      <div class="zone yellow">Footer</div>
   </div>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat aut vero, odit repellat esse in totam laborum numquam assumenda consequatur dignissimos architecto consequuntur corporis voluptates quis, temporibus quibusdam cumque at?</p>
+  
 </body>
 </html>
