--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@
               <li><a href="">Contacts</a></li>
           </ul>
       </div>
-      <div class="zone red">Cover</div>
-      <div class="zone blue">Project Grid</div>
+      <div class="jumbo zone red">Cover</div>
+      <div class="zone blue">Project Grid
+            <div class="pgrid">
+                <div class='item'><img src="./project-start/img/data_storage_2_2.png" alt=""></div>
+                <div class='item'><img src="./project-start/img/desktop_analytics_2.png" alt=""></div>
+                <div class='item'><img src="./project-start/img/files_2.png" alt=""></div>
+                <div class='item'><img src="./project-start/img/monitor_coding_2.png" alt=""></div>
+                <div class='item'><img src="./project-start/img/monitor_settings_2.png" alt=""></div>
+                <div class='item'><img src="./project-start/img/server_2_2.png" alt=""></div>
+                <div class='item'><img src="./project-start/img/server_3.png" alt=""></div>
+                <div class='item'><img src="./project-start/img/server_safe_2.png" alt=""></div>
+            </div>
+      </div>
       <div class="zone yellow">Footer</div>
   </div>
   
