footer and grid

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class='item'><img src="./project-start/img/server_safe_2.png" alt=""></div>
             </div>
       </div>
-      <div class="zone yellow">Footer</div>
+      <div class="zone yellow">By Yazmin Melgoza</div>
   </div>
   
 </body>
