--- a/advanced/index.html
+++ b/advanced/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-<script src="script.js"></script>    
+    <h1>Advanced Javascript</h1>
+    <p style="text-align: left;">TEST </p> <hr style="display: inline-block; width: 20rem;"><span style="float: right;display: inline;" >A 200T</span>
+    <script src="script3.js"></script>    
 </body>
 </html>
